# php-parser-speed-comparison-2026

./: CLAUDE.md  README.md
.github/workflows/: benchmark.yaml
halleck45-go-php-parser/: Makefile
mago-syntax/: Cargo.toml  Makefile
mago-syntax/src/: main.rs
nikic-PHP-Parser/: Makefile
z7zmey-php-parser-dev/: Makefile
