[package]
name = "mago-syntax-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mago-syntax-bench"
path = "src/main.rs"

[dependencies]
mago-syntax = "=1.42.0"
mago-allocator = "=1.42.0"
mago-database = "=1.42.0"
rayon = "1"
walkdir = "2"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
